--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -5,13 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Juego de preguntas</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <script src="https://kit.fontawesome.com/f46e1e1d56.js" crossorigin="anonymous"></script>
+    <title>Quiz Time</title>
+    <link href="/TpFinal/public/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="../public/estilos/style.css">
+    <link rel="stylesheet" href="/TpFinal/public/estilos/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/f46e1e1d56.js" crossorigin="anonymous"></script>
+    <script src="/TpFinal/public/js/jquery-3.7.0.min.js"></script>
 </head>
 <body class="antialiased text-gray-700 bg-gray-100">
