Arreglo ruta de imágenes. Añado imágenes de fondo a las vistas.

--- a/view/crearPregunta_view.mustache
+++ b/view/crearPregunta_view.mustache
@@ -1,6 +1,13 @@
 {{> header}}
+<style>
+    body {
+        background-image: url("/TpFinal/public/img/quiz_time.jpg");
+        background-size: cover;
+        background-position: center;
+    }
+</style>
 <div class="flex flex-col justify-center items-center w-full h-screen">
-    <h1 class="font-bold text-5xl text-center text-indigo-700">Crear pregunta</h1>
+    <h1 class="font-bold text-5xl text-center text-indigo-100">Crear pregunta</h1>
     <div class="bg-white p-12 rounded-lg shadow-lg w-[90%] sm:w-[500px] mt-8">
         <input id="pregunta" type="text" placeholder="Insertar pregunta"
                class="w-full mt-4 py-2 text-xl focus:outline-none border-b border-gray-300">
