--- a/view/ranking_view.mustache
+++ b/view/ranking_view.mustache
@@ -1,4 +1,6 @@
 {{> header}}
+
+
 <div class="flex flex-col justify-center items-center w-full h-screen">
     <h1 class="font-bold text-5xl text-center text-indigo-700">Ranking de jugadores</h1>
     <div class="w-[90%] sm:w-auto bg-white p-8 rounded-lg shadow-lg mt-8">
@@ -12,21 +14,14 @@
                 </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-300">
-                <tr class="whitespace-nowrap">
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">1</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">Alexis Enache</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">25</td>
-                </tr>
-                <tr class="whitespace-nowrap">
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">2</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">Alexis Enache</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">15</td>
-                </tr>
-                <tr class="whitespace-nowrap">
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">3</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">Alexis Enache</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">10</td>
-                </tr>
+                {{#jugadores}}
+
+                    <tr class="whitespace-nowrap">
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{posicion}}</td>
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{nombreApellido}}</td>
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{puntaje}}</td>
+                    </tr>
+                {{/jugadores}}
                 </tbody>
             </table>
         </div>
