se modifico el ranking y perfilJugador

--- a/view/ranking_view.mustache
+++ b/view/ranking_view.mustache
@@ -24,8 +24,8 @@
 
                     <tr class="whitespace-nowrap">
                         <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{posicion}}</td>
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{nombreApellido}}</td>
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{puntaje}}</td>
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{nombre}} {{apellido}}</td>
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{puntajeTotal}}</td>
                     </tr>
                 {{/jugadores}}
                 </tbody>
