--- a/view/ranking_view.mustache
+++ b/view/ranking_view.mustache
@@ -1,5 +1,4 @@
 {{> header}}
-
 <style>
     body {
         background-image: url("/TpFinal/public/img/quiz_time.jpg");
@@ -10,7 +9,7 @@
 <div class="flex flex-col justify-center items-center w-full h-screen">
     <h1 class="font-bold text-5xl text-center text-indigo-100">Ranking de jugadores</h1>
     <div class="w-[90%] sm:w-auto bg-white p-8 rounded-lg shadow-lg mt-8">
-        <div class="w-full border-b border-gray-200 shadow">
+        <div class="w-full border-b border-gray-200 shadow overflow-x-scroll md:overflow-x-hidden">
             <table class="w-full divide-y divide-indigo-700 ">
                 <thead class="bg-gray-50">
                 <tr>
@@ -20,14 +19,13 @@
                 </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-300">
-                {{#jugadores}}
-
-                    <tr class="whitespace-nowrap">
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{posicion}}</td>
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{nombre}} {{apellido}}</td>
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{puntajeTotal}}</td>
-                    </tr>
-                {{/jugadores}}
+                    {{#jugadores}}
+                        <tr class="whitespace-nowrap">
+                            <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{posicion}}</td>
+                            <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{nombre}} {{apellido}}</td>
+                            <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-500">{{puntajeTotal}}</td>
+                        </tr>
+                    {{/jugadores}}
                 </tbody>
             </table>
         </div>
