--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -33,7 +33,8 @@
                         <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Ranking</p>
                     </a>
                 </div>
-                <div class="w-full flex justify-center items-center p-6 space-x-4">
+                <div class="h-full flex items-center justify-center">
+                <div class="w-full mx-auto text-center">
                     <a href="/tpFinal/perfilJugador/list?id={{usuario.id}}"
                        class="flex justify-center lg:justify-start items-center hover:text-white text-center lg:text-start focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2 w-full lg:w-52">
                         <img class="mx-4 w-14 h-14 rounded-full" src="/tpfinal/public/img/{{usuario.foto_perfil}}" alt="avatar">
@@ -41,6 +42,7 @@
                     </a>
                 </div>
 
+                </div>
             </div>
             <div class="flex flex-col w-full lg:w-3/4 xl:w-4/5 justify-center">
                 <div class="w-full xl:w-1/4">
@@ -69,7 +71,6 @@
                                 <td class="px-6 py-4 text-center text-md text-gray-500">{{puntaje}}</td>
                             </tr>
                         {{/historial}}
-
 
                         </tbody>
                     </table>
