Agrego funcionalidad para almacenar las estadísticas de cada pregunta y las estadísticas de cada usuario.

--- a/view/pregunta_view.mustache
+++ b/view/pregunta_view.mustache
@@ -210,7 +210,7 @@
                         let data = JSON.parse(response);
 
                         if (data.esLaRespuestaCorrecta && respondio) {
-
+                            $('#puntaje').text(data.puntos);
                             setTimeout(function () {
                                 $('#contenedor-numero-pregunta').hide();
                                 $('#contenedor-pregunta').hide();
