--- a/view/revisionPreguntas_view.mustache
+++ b/view/revisionPreguntas_view.mustache
@@ -5,55 +5,88 @@
         background-size: cover;
         background-position: center;
     }
+
+    .tr-animation {
+        transition: background-color 0.3s ease;
+    }
+    .tr-animation:hover {
+        background-color: #f5f5f5; /* Color de fondo al poner el puntero encima */
+        cursor: pointer;
+    }
+    .tr-animation:active {
+        background-color: #dcdcdc; /* Color de fondo al hacer clic */
+    }
+    .estado1:before {
+        content: 'Aprobada';
+    }
+    .estado3:before {
+        content: 'Reportada';
+    }
+    .estado4:before {
+        content: 'Sugerida';
+    }
+    .preguntas-container {
+        max-height: 400px;
+        overflow-y: auto;
+    }
+    table {
+        table-layout: fixed;
+    }
+    td {
+        word-wrap: break-word;
+    }
 </style>
 <div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
     <h1 class="font-bold text-5xl text-center text-indigo-100">Revision de preguntas</h1>
     <div class="w-[90%] sm:w-auto bg-white p-8 rounded-lg shadow-lg mt-8">
         <div class="w-full border-b border-gray-200 shadow overflow-x-scroll md:overflow-x-hidden">
-            <table class="w-full divide-y divide-indigo-700 ">
-                <thead class="bg-gray-50">
-                <tr>
-                    <th class="text-center text-md px-2 sm:px-6 py-2 text-gray-500">Pregunta</th>
-                    <th class="text-center text-md px-2 sm:px-6 py-2 text-gray-500">Estado</th>
-
-
-                </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-300">
-
-                {{#preguntas}}
-                    <style>
-                        .tr-animation {
-                            transition: background-color 0.3s ease;
-                        }
-
-                        .tr-animation:hover {
-                            background-color: #f5f5f5; /* Color de fondo al poner el puntero encima */
-                            cursor: pointer;
-                        }
-
-                        .tr-animation:active {
-                            background-color: #dcdcdc; /* Color de fondo al hacer clic */
-                        }
-                    </style>
-                    <tr class="whitespace-nowrap tr-animation"
-                        onclick="window.location='/tpFinal/editor/revisarPregunta?id={{id}}';">
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{pregunta}}</td>
-                    <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900 estado{{id_estado_pregunta}}"></td>
-
+            <select id="filtroEstado" onchange="filtrarPreguntas()">
+                <option value="todos">Todos</option>
+                <option value="1">Aprobada</option>
+                <option value="3">Reportada</option>
+                <option value="4">Sugerida</option>
+            </select>
+            <div class="preguntas-container">
+                <table class="w-full divide-y divide-indigo-700">
+                    <thead class="bg-gray-50">
+                    <tr>
+                        <th class="text-center text-md px-2 sm:px-6 py-2 text-gray-500">Pregunta</th>
+                        <th class="text-center text-md px-2 sm:px-6 py-2 text-gray-500">Estado</th>
                     </tr>
-                {{/preguntas}}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody class="bg-white divide-y divide-gray-300">
+                    {{#preguntas}}
+                        <tr class="whitespace-nowrap tr-animation"  onclick="window.location='/tpFinal/editor/revisarPregunta?id={{id}}';"
+                        data-estado="{{id_estado_pregunta}}">
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{pregunta}}</td>
+                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900 estado{{id_estado_pregunta}}"></td>
+                        </tr>
+                    {{/preguntas}}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
 
 <script>
-    let estadoReportado = $(".estado3");
-    let estadoSugerido = $(".estado4");
-    estadoReportado.text('Reportado');
-    estadoSugerido.text('Sugerido');
+    function filtrarPreguntas() {
+        let estadoSeleccionado = document.getElementById('filtroEstado').value;
+        let filasPreguntas = document.querySelectorAll('.tr-animation');
 
+        filasPreguntas.forEach(function (fila) {
+            let estadoPregunta = parseInt(fila.getAttribute('data-estado'));
+            let filaVisible = true;
 
+            if (estadoSeleccionado !== 'todos' && estadoPregunta !== parseInt(estadoSeleccionado)) {
+                filaVisible = false;
+            }
+
+            if (filaVisible) {
+                fila.style.display = 'table-row';
+            } else {
+                fila.style.display = 'none';
+            }
+        });
+    }
 </script>
