--- a/view/revisionPreguntas_view.mustache
+++ b/view/revisionPreguntas_view.mustache
@@ -9,57 +9,98 @@
     .tr-animation {
         transition: background-color 0.3s ease;
     }
+
     .tr-animation:hover {
         background-color: #f5f5f5; /* Color de fondo al poner el puntero encima */
         cursor: pointer;
     }
+
     .tr-animation:active {
         background-color: #dcdcdc; /* Color de fondo al hacer clic */
     }
+
     .estado1:before {
-        content: 'Aprobada';
+        content: 'Activa';
+        background-color: #86efac;
+        color: #166534;
     }
+
+    .estado2:before {
+        content: 'Suspendida';
+        background-color: #fca5a5;
+        color: #991b1b;
+    }
+
     .estado3:before {
         content: 'Reportada';
+        background-color: #fde047;
+        color: #854d0e;
     }
+
     .estado4:before {
         content: 'Sugerida';
+        background-color: #7dd3fc;
+        color: #075985;
     }
+
+    .estado1:before, .estado2:before, .estado3:before, .estado4:before {
+        padding: 0.5rem;
+        border-radius: 3px;
+    }
+
+    .categoria1:before {
+        content: 'Deporte';
+    }
+
+    .categoria2:before {
+        content: 'Geografía';
+    }
+
+    .categoria3:before {
+        content: 'Música';
+    }
+
     .preguntas-container {
         max-height: 400px;
         overflow-y: auto;
     }
+
     table {
         table-layout: fixed;
     }
+
     td {
         word-wrap: break-word;
     }
 </style>
-<div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
-    <h1 class="font-bold text-5xl text-center text-indigo-100">Revision de preguntas</h1>
-    <div class="w-[90%] sm:w-auto bg-white p-8 rounded-lg shadow-lg mt-8">
-        <div class="w-full border-b border-gray-200 shadow overflow-x-scroll md:overflow-x-hidden">
-            <select id="filtroEstado" onchange="filtrarPreguntas()">
-                <option value="todos">Todos</option>
-                <option value="1">Aprobada</option>
-                <option value="3">Reportada</option>
-                <option value="4">Sugerida</option>
-            </select>
+<div class="flex flex-col justify-center items-center w-full my-8 lg:my-0 lg:h-screen">
+    <h1 class="font-bold text-5xl text-center text-indigo-100">Revisión de preguntas</h1>
+    <div class="w-[90%] bg-white p-8 rounded-lg shadow-lg mt-8">
+        <select class="mb-6 text-lg focus:outline-none border-b border-b-solid border-b-gray-400 p-2" id="filtroEstado"
+                onchange="filtrarPreguntas()">
+            <option value="todos">Todos</option>
+            <option value="1">Activa</option>
+            <option value="2">Suspendida</option>
+            <option value="3">Reportada</option>
+            <option value="4">Sugerida</option>
+        </select>
+        <div class="w-full border-b border-gray-200 shadow">
             <div class="preguntas-container">
-                <table class="w-full divide-y divide-indigo-700">
+                <table class="w-full min-w-full divide-y divide-indigo-700">
                     <thead class="bg-gray-50">
                     <tr>
-                        <th class="text-center text-md px-2 sm:px-6 py-2 text-gray-500">Pregunta</th>
-                        <th class="text-center text-md px-2 sm:px-6 py-2 text-gray-500">Estado</th>
+                        <th class="md:w-1/5 text-center text-md px-2 sm:px-6 py-2 text-gray-500">Categoría</th>
+                        <th class="md:w-3/5 text-center text-md px-2 sm:px-6 py-2 text-gray-500">Pregunta</th>
+                        <th class="md:w-1/5 text-center text-md px-2 sm:px-6 py-2 text-gray-500">Estado</th>
                     </tr>
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-300">
                     {{#preguntas}}
-                        <tr class="whitespace-nowrap tr-animation"  onclick="window.location='/tpFinal/editor/revisarPregunta?id={{id}}';"
+                        <tr class="tr-animation" onclick="window.location='/tpFinal/editor/revisarPregunta?id={{id}}';"
                         data-estado="{{id_estado_pregunta}}">
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{pregunta}}</td>
-                        <td class="px-2 sm:px-6 py-4 text-center text-md text-gray-900 estado{{id_estado_pregunta}}"></td>
+                        <td class="md:w-1/5 px-2 sm:px-6 py-4 text-center text-md text-gray-900 categoria{{id_categoria}}"></td>
+                        <td class="md:w-3/5 px-2 sm:px-6 py-4 text-center text-md text-gray-900">{{pregunta}}</td>
+                        <td class="md:w-1/5 px-2 sm:px-6 py-4 text-center text-md text-gray-900 estado{{id_estado_pregunta}}"></td>
                         </tr>
                     {{/preguntas}}
                     </tbody>
