--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -1,5 +1,5 @@
 {{> header}}
-<div class="bg-gray-200 my-8 2xl:my-0 2xl:h-screen overflow-hidden flex items-center justify-center">
+<div class="bg-gray-200 my-0 h-screen overflow-hidden flex items-center justify-center">
     <div class="w-10/12 lg:w-9/12 xl:w-7/12 flex">
         <div class="w-full h-auto hidden lg:block lg:w-1/2 bg-cover rounded-lg lg:rounded-r-none"
              style="background-image: url('https://mlqfdkzc0cug.i.optimole.com/w:auto/h:auto/q:mauto/f:avif/https://humanit.as/experiences/wp-content/uploads/sites/7/2015/12/Question-Mark-HD-Wallpaper15.jpg')">
