falta hacer estilo breadcrums para el administrador
necesitamos que el administrador puede ir a cada grafico, hacerlo pdf y poder volver a la vista anterior

--- a/view/cantidadJugadores_view.mustache
+++ b/view/cantidadJugadores_view.mustache
@@ -4,6 +4,9 @@
 
 <h1>JUGADORES</h1>
 
+<a href="/tpFinal/administrador/estadisticas">estadisticas</p>
+</a>
+
 <!-- Opciones de filtro -->
 <form action="/tpFinal/administrador/cantJugadores" method="GET">
     <select name="filtro">
