--- a/view/estadisticas_view.mustache
+++ b/view/estadisticas_view.mustache
@@ -5,3 +5,5 @@
     <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-question"></i>
     <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Cantidad jugadores</p>
 </a>
+
+<a href="/tpFinal/lobby/list">lobby</p>
