--- a/view/pregunta_view.mustache
+++ b/view/pregunta_view.mustache
@@ -153,6 +153,9 @@
                     case '3':
                         $('#categoria').html('<div class="w-full text-center text-xl text-pink-800 font-bold p-4 bg-pink-300">Música</div>');
                         break;
+                    case '4':
+                        $('#categoria').html('<div class="w-full text-center text-xl text-red-800 font-bold p-4 bg-pink-300">Entretenimiento</div>');
+                        break;
                 }
 
                 $('#pregunta').text(pregunta.pregunta);
