Redirección en la ruta 'editor/'. Elimino métodos del modelo Partida que no se utilizaban. Base de datos actualizada con las tablas que corresponden.

--- a/view/pregunta_view.mustache
+++ b/view/pregunta_view.mustache
@@ -154,7 +154,7 @@
                         $('#categoria').html('<div class="w-full text-center text-xl text-pink-800 font-bold p-4 bg-pink-300">Música</div>');
                         break;
                     case '4':
-                        $('#categoria').html('<div class="w-full text-center text-xl text-red-800 font-bold p-4 bg-pink-300">Entretenimiento</div>');
+                        $('#categoria').html('<div class="w-full text-center text-xl text-red-800 font-bold p-4 bg-red-300">Entretenimiento</div>');
                         break;
                 }
 
