Arreglo puntajes en el lobby. Añado preguntas a la base de datos con diferentes valores en las estadísticas para que cree correctamente la lista de preguntas para cada jugador.

--- a/view/revisarPregunta_view.mustache
+++ b/view/revisarPregunta_view.mustache
@@ -44,6 +44,11 @@
                         <option value="1">Deporte</option>
                         <option value="2">Geografía</option>
                         <option value="3">Música</option>
+                        <option value="4">Entretenimiento</option>
+                        <option value="5">Historia</option>
+                        <option value="6">Tecnología</option>
+                        <option value="7">Literatura</option>
+                        <option value="8">Matemática</option>
                     </select>
                 </div>
                 <input type="hidden" name="id_pregunta" id="id_pregunta" value="{{id}}">
