--- a/view/revisionPreguntas_view.mustache
+++ b/view/revisionPreguntas_view.mustache
@@ -60,6 +60,26 @@
         content: 'Música';
     }
 
+    .categoria4:before {
+        content: 'Entretenimiento';
+    }
+
+    .categoria5:before {
+        content: 'Historia';
+    }
+
+    .categoria6:before {
+        content: 'Tecnología';
+    }
+
+    .categoria7:before {
+        content: 'Literatura';
+    }
+
+    .categoria8:before {
+        content: 'Matemática';
+    }
+
     .preguntas-container {
         max-height: 400px;
         overflow-y: auto;
