--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -37,18 +37,13 @@
                             <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Revisión de preguntas</p>
                         </a>
                     {{/editor}}
-
                     {{#administrador}}
                         <a href="/tpFinal/administrador/estadisticas"
                            class="flex justify-center lg:justify-start items-center hover:text-white text-center lg:text-start focus:bg-gray-700 focus:text-white text-gray-400 rounded px-3 py-2 w-full lg:w-52">
-                            <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-check"></i>
+                            <i class="mx-2 sm:mx-1 lg:w-1/5 text-center fa-solid fa-chart-line"></i>
                             <p class="mx-2 sm:mx-1 lg:w-4/5 text-base">Estadisticas</p>
                         </a>
                     {{/administrador}}
-
-
-
-
                 </div>
                 <div class="h-1/2 lg:h-1/4 w-full flex justify-center items-center p-6 space-x-4">
                     <a href="/tpFinal/perfilJugador/list?id={{usuario.id}}"
